--- a/Three.js/Aula2/ex2_lighting.html
+++ b/Three.js/Aula2/ex2_lighting.html
@@ -5,7 +5,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>My first Three.js app</title>
+	<title>Lighting and materials</title>
 
 	<style>
 		canvas {
@@ -26,12 +26,7 @@
 		let scene = new THREE.Scene();
 		let viewSize = 10;
 		let aspectRatio = window.innerWidth / window.innerHeight;
-		let camera = new THREE.OrthographicCamera(
-			-aspectRatio * viewSize / 2,
-			aspectRatio * viewSize / 2,
-			viewSize / 2,
-			-viewSize / 2,
-			0.1, 1000);
+		let camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
 		let renderer = new THREE.WebGLRenderer();
 		renderer.setSize(window.innerWidth, window.innerHeight);
@@ -40,10 +35,7 @@
 
 		window.addEventListener('resize', function () {
 			renderer.setSize(window.innerWidth, window.innerHeight)
-			let newAspect = window.innerWidth / window.innerHeight
-			camera.aspect = newAspect;
-			camera.left = viewSize * newAspect / -2;
-			camera.right = viewSize * newAspect / 2;
+			camera.aspect = window.innerWidth / window.innerHeight;
 			camera.updateProjectionMatrix();
 		});
 
@@ -69,52 +61,6 @@
 		});
 		const cube = new THREE.Mesh(geometry, material);
 		scene.add(cube);
-
-		// left sphere
-		geometry = new THREE.SphereGeometry(1, 10, 10);
-		material = new THREE.MeshLambertMaterial({
-			color: '#006063',
-		});
-		const sphere = new THREE.Mesh(geometry, material);
-		sphere.position.x = -2.5;
-		scene.add(sphere);
-
-		// right sphere
-		geometry = new THREE.SphereGeometry(1, 10, 10);
-		material = new THREE.MeshPhongMaterial({
-			color: '#006063',
-			specular: '#a9fcff',
-			shininess: 100,
-			flatShading: true
-		});
-		const sphere2 = new THREE.Mesh(geometry, material);
-		sphere2.position.x = 2.5;
-		scene.add(sphere2);
-
-		// right down sphere
-		geometry = new THREE.SphereGeometry(1, 10, 10);
-		material = new THREE.MeshPhongMaterial({
-			color: '#006063',
-			specular: '#a9fcff',
-			shininess: 100,
-		});
-		const sphere3 = new THREE.Mesh(geometry, material);
-		sphere3.position.set(2.5, -2.5, 0);
-		scene.add(sphere3);
-
-		// left down sphere
-		const emerald = new THREE.MeshPhongMaterial({
-			shading: THREE.SmoothShading
-		});
-		emerald.color = new THREE.Color(0.07568, 0.61424, 0.07568);
-		emerald.specular = new THREE.Color(0.633, 0.7278, 0.633);
-		emerald.shininess = 0.6 * 256;
-
-		geometry = new THREE.SphereGeometry(1, 10, 10);
-		const sphere4 = new THREE.Mesh(geometry, emerald);
-		sphere4.position.set(-2.5, -2.5, 0);
-		scene.add(sphere4);
-
 
 		let render = function () {
 			requestAnimationFrame(render);
