--- a/Three.js/Aula2/ex5_transformations.html
+++ b/Three.js/Aula2/ex5_transformations.html
@@ -5,7 +5,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Transparency</title>
+	<title>Transformations (scale and rotation)</title>
 
 	<style>
 		canvas {
@@ -53,7 +53,7 @@
 		// initial cube
 		const boxGeometry = new THREE.BoxGeometry(2, 1, 4);
 		let material = new THREE.MeshPhongMaterial({
-			color: 0x0000ff,
+			color: 0x0066ff,
 			specular: '#a9fcff',
 			shininess: 0,
 			opacity: 0.5,
