--- a/Three.js/Aula2/ex6_transformations.html
+++ b/Three.js/Aula2/ex6_transformations.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Transparency</title>
+    <title>Transformations (rotations)</title>
 
     <style>
         canvas {
@@ -66,7 +66,7 @@
         car.add(cube);
 
         // wheels
-        const wheelGeometry =new THREE.CylinderGeometry(0.5, 0.5, 0.2, 32);
+        const wheelGeometry = new THREE.CylinderGeometry(0.5, 0.5, 0.2, 32);
         const glassMaterial = new THREE.MeshPhongMaterial({
             color: 0xff0000,
             specular: 0xFFFFFF,
@@ -77,7 +77,7 @@
         for (const pos of [[-1, -0.5, -2], [1, -0.5, 2], [-1, -0.5, 2], [1, -0.5, -2]]) {
             let sphere = new THREE.Mesh(wheelGeometry, glassMaterial);
             sphere.position.set(...pos);
-            sphere.rotation.z = 0.5*Math.PI;
+            sphere.rotation.z = 0.5 * Math.PI;
             car.add(sphere);
         }
         // car.position.set(0);
@@ -97,13 +97,13 @@
                 color: 0x0000ff,
                 axis: [1, 0, 0],
             }
-        ]
+        ];
 
         const cylinderGeometry = new THREE.CylinderGeometry(0.1, 0.1, 1, 32);
         for (const a of axesProps) {
             let material = new THREE.MeshBasicMaterial({ color: a.color });
             let cylinder = new THREE.Mesh(cylinderGeometry, material);
-            cylinder.rotation.set(...a.axis.map(x => 0.5*Math.PI*x));
+            cylinder.rotation.set(...a.axis.map(x => 0.5 * Math.PI * x));
             cylinder.translateY(0.5);
             axes.add(cylinder);
         }
@@ -111,22 +111,20 @@
 
         let offset = new THREE.Vector3(0, 0, -1);
 
-        car.position.set(1, 0, 0)
+        car.position.set(1, 0, 0);
 
-        // car.position.set(-1, 0, -1);
         let render = function () {
             requestAnimationFrame(render);
 
             controls.update();
 
-            // rotate c
             // car.parent.localToWorld(car.position);
             car.position.sub(offset);
-            car.position.applyAxisAngle(new THREE.Vector3(0, 1 ,0), 0.005);
+            car.position.applyAxisAngle(new THREE.Vector3(0, 1, 0), 0.005);
             car.position.add(offset);
             // car.parent.worldToLocal(car.position); 
 
-            car.rotateOnAxis(new THREE.Vector3(0, 1 ,0), 0.005);
+            car.rotateOnAxis(new THREE.Vector3(0, 1, 0), 0.005);
 
             renderer.render(scene, camera);
         };
