--- a/Three.js/Aula2/ex3_shading.html
+++ b/Three.js/Aula2/ex3_shading.html
@@ -52,22 +52,22 @@
 		const alight = new THREE.AmbientLight(0xffffff);
 		scene.add(alight);
 
-		// red directional light
-		const redDirectionalLight = new THREE.DirectionalLight(0xff0000, 1.0);
-		redDirectionalLight.position.set(-5, 0, 0);
-		scene.add(redDirectionalLight);
+		// // red directional light
+		// const redDirectionalLight = new THREE.DirectionalLight(0xff0000, 1.0);
+		// redDirectionalLight.position.set(-5, 0, 0);
+		// scene.add(redDirectionalLight);
 
-		// blue directional light
-		const blueDirectionalLight = new THREE.DirectionalLight(0x0000ff, 1.0);
-		blueDirectionalLight.position.set(5, 0, 0);
-		scene.add(blueDirectionalLight);
+		// // blue directional light
+		// const blueDirectionalLight = new THREE.DirectionalLight(0x0000ff, 1.0);
+		// blueDirectionalLight.position.set(5, 0, 0);
+		// scene.add(blueDirectionalLight);
 
-		// green directional light
-		const greenDirectionalLight = new THREE.DirectionalLight(0x00ff00, 1.0);
-		greenDirectionalLight.position.set(0, 0, -5);
-		greenDirectionalLight.target.position.set(-2.5, 0, 0);
-		scene.add(greenDirectionalLight);
-		scene.add(greenDirectionalLight.target);
+		// // green directional light
+		// const greenDirectionalLight = new THREE.DirectionalLight(0x00ff00, 1.0);
+		// greenDirectionalLight.position.set(0, 0, -5);
+		// greenDirectionalLight.target.position.set(-2.5, 0, 0);
+		// scene.add(greenDirectionalLight);
+		// scene.add(greenDirectionalLight.target);
 
 		// initial cube
 		const cubeGeometry = new THREE.BoxGeometry(1, 1, 1);
