--- a/Three.js/Aula3/ex3_sphere.html
+++ b/Three.js/Aula3/ex3_sphere.html
@@ -15,6 +15,13 @@
     <script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
     <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
     <script>
+
+        const DISTANCE_FROM_EARTH = 356400;
+        const PERIOD = 28;
+        const INCLINATION = 0.089;
+        const SIZE_IN_EARTHS = 1 / 3.7;
+        const EARTH_RADIUS = 6371;
+
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
@@ -56,9 +63,31 @@
 			shininess: 100,
 			flatShading: true
 		});
-		let sphere = new THREE.Mesh(sphereGeometry, material);
-        sphere.rotation.z = z_incl;
-		scene.add(sphere)
+		let earth = new THREE.Mesh(sphereGeometry, material);
+        earth.rotation.z = z_incl;
+        scene.add(earth)
+
+        const moon_geometry = new THREE.SphereGeometry(SIZE_IN_EARTHS, 32, 32);
+		let moon_material = new THREE.MeshPhongMaterial({
+			map: new THREE.TextureLoader().load('moon_1024.jpg'),
+			specular: '#a9fcff',
+			shininess: 100,
+			flatShading: true
+		});
+		let moon = new THREE.Mesh(moon_geometry, moon_material);
+
+        let distance = DISTANCE_FROM_EARTH / EARTH_RADIUS;
+        moon.position.set(Math.sqrt(distance / 2), 0,-Math.sqrt(distance / 2));
+        
+        // Rotate the moon so it shows its moon-face toward earth
+        moon.rotation.y = Math.PI;
+        moon.rotation.x = INCLINATION;
+        
+        // For animation 
+        moon.rotation.y += (earth.rotation.y / PERIOD);
+
+        scene.add(moon)
+        earth.attach(moon);
 
 
         camera.position.z = 5;
@@ -79,8 +108,8 @@
         let render = function () {
             requestAnimationFrame(render);
 
-            sphere.rotation.y += y_speed;
-            sphere.rotation.z = z_incl;
+            earth.rotation.y += y_speed;
+            earth.rotation.z = z_incl;
             controls.update();
 
             renderer.render(scene, camera);
